# pvpltools

./: .gitignore  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: flake8.yml  publish.yml  pytest.yml
ci/: requirements-pip-minimal.txt  requirements-py3.10.txt  requirements-py3.7-min.txt  requirements-py3.8-min.txt
docs/: conf.py  index.rst
docs/api_reference/: dataplusmeta.rst  iec61853.rst  index.rst  module_efficiency.rst
docs/contribute/: contributing.rst
docs/user_guide/: index.rst  installation.rst  quick-overview.rst
docs/whatsnews/: 0.0.0-pre-PyPI-release.rst  0.1.0.rst  0.1.0a.rst  _index.rst
examples/: README.rst
examples/dataplusmeta/: README.rst
pvpltools/: dataplusmeta.py  iec61853.py
pvpltools/test/: test_iec61853.py
pvpltools/test/data/: .gitignore
