[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pvpltools"
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "openpyxl",
  "pvlib",
  "PyYAML>=5.1.2",
  "scipy",
]
requires-python = ">=3.8"
authors = [
  {name = "Anton Driesse", email = "anton.driesse@pvperformancelabs.com"},
]
description = "Useful tools for photovoltaics and beyond."
readme = "README.md"
keywords = ["photovoltaics", "tools", "pv"]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
]
docs = [
    "sphinx~=7.4",
    "pydata-sphinx-theme~=0.15",
    "sphinx-gallery~=0.18",
    "sphinx_toggleprompt~=0.5",
    "sphinx_favicon~=1.0"
]
all = ["pvpltools[test,docs]"]

[project.urls]
"Homepage" = "https://pvpltools.readthedocs.io/en/latest/"
"Documentation" = "https://pvpltools.readthedocs.io/en/latest/"
"Repository" = "https://github.com/pvlabs/pvpltools"
"Bug Tracker" = "https://github.com/pvlabs/pvpltools/issues"
"Changelog" = "https://pvpltools.readthedocs.io/en/latest/"

[tool.setuptools_scm]

[tool.flake8]
max-line-length = 79
