[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pvpltools"
dynamic = ["version"]
dependencies = [
  "matplotlib>=3.5.0",
  "numpy>=1.20.3",
  "pandas>=1.5.0",
  "openpyxl",
  "pvlib>=0.8.0",
  "ruamel.yaml>=0.15.0",
  "scipy>=1.7.1",
]
requires-python = ">=3.8"
authors = [
  {name = "Anton Driesse", email = "anton.driesse@pvperformancelabs.com"},
]
description = "Useful tools for photovoltaics and beyond."
readme = "README.md"
keywords = ["photovoltaics", "tools", "pv"]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
]
docs = [
    "sphinx~=7.4.0",
    "pydata-sphinx-theme~=0.15.0",
    "sphinx-gallery~=0.18.0",
    "sphinx_toggleprompt~=0.5.0",
    "sphinx_favicon~=1.0.0",
    "sphinx-copybutton~=0.5.0",
]
all = ["pvpltools[test,docs]"]

[project.urls]
"Homepage" = "https://pvpltools.readthedocs.io/en/latest/"
"Documentation" = "https://pvpltools.readthedocs.io/en/latest/"
"Repository" = "https://github.com/pvplabs/pvpltools"
"Bug Tracker" = "https://github.com/pvplabs/pvpltools/issues"
"Changelog" = "https://pvpltools.readthedocs.io/en/latest/"

# Control which files are included in the built distribution
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html [2024-10-25]
[tool.setuptools]
include-package-data = true  # inclusion of non-python files in the package folder (like data files) [default: true]
[tool.setuptools.packages.find]
include = ["pvpltools*"]
exclude = ["pvpltools.test*"]
[tool.setuptools.exclude-package-data]
pvpltools = ["test/*"]  # exclude test folder from the package

[tool.setuptools_scm]

[tool.flake8]
max-line-length = 79
